--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcc 'D'
 - !lcsh 'France -- Description and travel'
 - !lcsh 'Germany -- Description and travel'
+- GITenberg
 title: Observations and Reflections Made in the Course of a Journey through France,
   Italy, and Germany, Vol. I
 url: http://www.gutenberg.org/ebooks/16445
